--- a/src/sample/sample.fxml
+++ b/src/sample/sample.fxml
@@ -4,8 +4,33 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.CheckBox?>
+<?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.chart.LineChart?>
+<?import javafx.scene.control.ListCell?>
 <VBox fx:controller="sample.Controller"
       xmlns:fx="http://javafx.com/fxml" alignment="center">
+    <VBox VBox.vgrow="SOMETIMES">
+    <HBox >
+        <TextField fx:id="iPAddress" promptText="IP Address"  />
+        <TextField fx:id="port" promptText="Port"  />
+        <CheckBox fx:id="alwaisOntop" text="Always on Top" />
+    </HBox>
+    <HBox >
+        <TextField fx:id="Login" promptText="Login" HBox.hgrow="ALWAYS" />
+        <PasswordField fx:id="Password" promptText="Password" HBox.hgrow="ALWAYS" />
+        <Button fx:id="Buttonlogin" text=" Подключиться" HBox.hgrow="ALWAYS"/>
+    </HBox>
+    </VBox>
+    <HBox VBox.vgrow="ALWAYS">
+        <TextArea fx:id="log" editable="false" HBox.hgrow="ALWAYS"/>
+    </HBox>
+    <HBox VBox.vgrow="NEVER">
+        <TextField fx:id="message" promptText="Введите сообщение..." HBox.hgrow="ALWAYS"/>
+        <Button fx:id="send" text="Отправить" HBox.hgrow="ALWAYS"/>
+    </HBox>
 
-    
 </VBox>
